--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,12 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 12 hours
+  schedule: # thực thi mỗi 12 giờ
     - cron: "0 */12 * * *"
-
   workflow_dispatch:
-
   push:
     branches:
-    - master
+      - master
 
 jobs:
   generate:
@@ -25,13 +23,13 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: ./dist/snake.svg?palette=github-dark
+          outputs: dist/snake.svg?palette=github-dark  # Tạo trực tiếp trong thư mục dist
 
       - name: Create output directory if not exists
         run: mkdir -p ./dist
 
-      - name: Move snake.svg to dist
-        run: mv snake.svg ./dist/snake.svg
+      # Vì tệp được tạo trực tiếp vào dist, bước di chuyển không còn cần thiết nữa
+      # Đã xóa bước di chuyển
 
       - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
